--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         }
     </style>
 
-    <title>My Room</title>
+    <title>Afdal Firdaus</title>
 </head>
 
 <body class="mt-5">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
         <div class="container">
-            <a class="navbar-brand" href="#">Afdal</a>
+            <a class="navbar-brand" href="#">Afdal Firdaus</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
