--- a/index.html
+++ b/index.html
@@ -1,298 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-    <!-- My CSS -->
-    <style>
-        section {
-            min-height: 420px;
-        }
-    </style>
-
-    <title>Afdal Firdaus</title>
-</head>
-
-<body class="mt-5">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
-        <div class="container">
-            <a class="navbar-brand" href="#">Afdal Firdaus</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="#About">About</a>
-                    <a class="nav-link" href="#Portfolio">Portfolio</a>
-                    <a class="nav-link" href="#Contact">Contact</a>
-
-                </div>
-            </div>
-        </div>
-    </nav>
-
-
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container text-center">
-            <img src="img/adal.png" width="25%" class="rounded-circle img-thumbnail">
-            <h1 class="display-4">Afdal</h1>
-            <p class="lead">Hello, Selamat Datang</p>
-        </div>
-    </div>
-
-    <section id="About" class="About">
-        <div class="container">
-            <div class="row mb-4">
-                <div class="col text-center">
-                    <h2>About</h2>
-                </div>
-
-            </div>
-
-
-            <div class="row justify-content-center mb-5">
-                <div class="col-md-5 text-center">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem perspiciatis reiciendis
-                        eveniet
-                        saepe? Id, architecto neque! Voluptatibus deserunt voluptas dolorem ipsa eius itaque doloribus
-                        non,
-                        quasi recusandae perferendis beatae.
-
-                    </p>
-                </div>
-                <div class="col-md-5 text-center">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, provident vero, cumque assumenda
-                        veniam impedit explicabo illum qui exercitationem sunt quibusdam nemo, amet ad! Dignissimos
-                        omnis
-                        vel error aliquid dolorem.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
-    <section id="Portfolio" class="portfolio bg-light pb-4">
-        <div class="container">
-            <div class="row mb-4 pt-4">
-                <div class="col text-center">
-                    <h2>Portfolio</h2>
-                </div>
-            </div>
-
-            <div class="row mb-4">
-                <div class="col-md">
-                    <div class="card">
-                        <img class="card-img-top" src="img/card7.jpg" class="card-img-top" alt="Card image card">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md">
-                    <div class="card">
-                        <img class="card-img-top" src="img/card2.jpg" class="card-img-top" alt="Card image card">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="card">
-                        <img class="card-img-top" src="img/card3.jpg" class="card-img-top" alt="Card image card">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mb-4">
-                <div class="col-md">
-                    <div class="card">
-                        <img class="card-img-top" src="img/card4.jpg" class="card-img-top" alt="Card image card">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md">
-                    <div class="card">
-                        <img class="card-img-top" src="img/card5.jpg" class="card-img-top" alt="Card image card">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="card">
-                        <img class="card-img-top" src="img/card6.jpg" class="card-img-top" alt="Card image card">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-    </section>
-
-
-
-
-
-    <section id="Contact" class="contact">
-        <div class="container">
-            <div class="row pt-4">
-                <div class="col text-center">
-                    <h2>contact Us</h2>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-lg-4">
-                    <div class="card text-white bg-warning mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">Contact Me</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore,
-                                adipisci.</p>
-                        </div>
-                    </div>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <h1>Location</h1>
-                        </li>
-                        <li class="list-group-item">My office</li>
-                        <li class="list-group-item">perum Puri Hesti Insani</li>
-                        <li class="list-group-item">West Java,indonesia</li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-6">
-                    <form>
-                        <div class="form-group">
-                            <label for="nama">nama</label>
-                            <input type="text" class="form-control" id="nama">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">email</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="no_telepon">no telepon</label>
-                            <input type="number" class="form-control" id="no_telepon">
-                        </div>
-                        <div class="form-group">
-                            <label for="pesan">pesan</label>
-                            <textarea type="text" class="form-control" id="pesan"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button type="button" class="btn btn-warning text-light">Kirim pesan</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
-    <footer class="bg-dark text-white">
-        <div class="container">
-            <div class="row pt-3">
-                <div class="col text-center">
-                    <p>Copyright 2021</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-    -->
-</body>
-
-</html>
+<!DOCTYPE html><html><head><title>Portofolio Afdal</title><meta charset=utf-8><meta name=description content="Cerita panjang perjalanan hidup dan karir saya sampai bisa menjadi programmer di beberapa perusahaan teknologi besar di Indonesia"><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><link rel=icon type=image/png sizes=128x128 href=icons/favicon-128x128.png><link rel=icon type=image/png sizes=96x96 href=icons/favicon-96x96.png><link rel=icon type=image/png sizes=32x32 href=icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=icons/favicon-16x16.png><link rel=icon type=image/ico href=favicon.ico><script defer src=js/vendor.6ed20cfc.js></script><script defer src=js/app.ea482a40.js></script><link href=css/vendor.788cbdd6.css rel=stylesheet><link href=css/app.31d6cfe0.css rel=stylesheet><link rel=manifest href=manifest.json><meta name=theme-color content=#027be3><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content="Portofolio Afdal"><link rel=apple-touch-icon href=icons/apple-icon-120x120.png><link rel=apple-touch-icon sizes=152x152 href=icons/apple-icon-152x152.png><link rel=apple-touch-icon sizes=167x167 href=icons/apple-icon-167x167.png><link rel=apple-touch-icon sizes=180x180 href=icons/apple-icon-180x180.png><link rel=mask-icon href=icons/safari-pinned-tab.svg color=#027be3><meta name=msapplication-TileImage content=icons/ms-icon-144x144.png><meta name=msapplication-TileColor content=#000000></head><body><div id=q-app></div></body></html>
