--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 
-    <title>Afdal Firdaus</title>
+    <title>Afdal Firdaus KEK KONTOL</title>
 </head>
 
 <body class="mt-5">
