--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="Masafdal tinggal di puri hesti insani">
+    <meta name="keywords" content="afdal, masafdal, puri hesti insani, gandoang">
+    <meta name="robots" content="index,follow">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -17,7 +19,7 @@
         }
     </style>
 
-    <title>Afdal Firdaus KEK KONTOL</title>
+    <title>Mas Afdal</title>
 </head>
 
 <body class="mt-5">
@@ -236,7 +238,10 @@
         <div class="container">
             <div class="row pt-3">
                 <div class="col text-center">
-                    <p>Copyright 2021</p>
+                    <p>Copyright © 2022 masafdal™. All rights reserved.
+                    </p>
+
+                    <button class="btn btn-danger">Subrek</button>
                 </div>
             </div>
         </div>
